@@ -1,3 +1,13 @@
+2006-10-19 Paul Jakma <paul.jakma@sun.com>
+
+	* bgpd.c: (peer_new) bgp element of peer absolutely must be
+	  filled in, make peer_new() require it as argument and update
+	  all callers. Fixes a crash reported by Jan 'yanek' Bortl and
+	  Andrew Schorr where bgpd would crash in bgp_pcount_adjust
+	  trying to dereference the bgp member of bgp->peer_self,
+	  triggered through redistribution.
+	* bgp_route.c: (bgp_pcount_adjust) assert sanity of arguments.
+
 2006-10-15 Paul Jakma <paul.jakma@sun.com>
 
 	* bgp_route.c: (bgp_table_stats_walker) NULL deref if table is
